# ee4308-proj2

./: .gitignore  README.md  bd.sh  clean_bd.sh  kill_gz.sh  proj2_sim.sh  run.sh  teleop_drone.sh
docs/: lab2.md  proj2.md  tips.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ee4308_bringup/share/ament_index/resource_index/package_run_dependencies/: ee4308_bringup
install/ee4308_bringup/share/ament_index/resource_index/parent_prefix_path/: ee4308_bringup
install/ee4308_bringup/share/ee4308_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ee4308_bringup/share/ee4308_bringup/cmake/: ament_cmake_export_dependencies-extras.cmake  ee4308_bringupConfig-version.cmake  ee4308_bringupConfig.cmake
install/ee4308_bringup/share/ee4308_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/ee4308_bringup/share/ee4308_bringup/launch/: proj2_sim.launch.py  sim.launch.py  spawn_models.launch.py
install/ee4308_bringup/share/ee4308_bringup/maps/: proj2_sim.pgm  proj2_sim.yaml
install/ee4308_bringup/share/ee4308_bringup/models/drone/: README  drone.urdf  drone_proj2.sdf  model.config  model.sdf
install/ee4308_bringup/share/ee4308_bringup/models/drone/meshes/: iris.dae  led.dae  led_lamp.dae  propeller_ccw.dae  propeller_cw.dae  spotlight.dae  vi_camera.dae  vi_sensor.dae  x3.dae
install/ee4308_bringup/share/ee4308_bringup/models/turtle/: turtle.urdf  turtle_proj1.sdf  turtle_proj2.sdf
install/ee4308_bringup/share/ee4308_bringup/params/: proj2.yaml  ros_gz_bridge_proj2.yaml
install/ee4308_bringup/share/ee4308_bringup/rviz/: proj2.rviz
install/ee4308_bringup/share/ee4308_bringup/worlds/: empty_world.world  turtlebot3_house.world  turtlebot3_world.world
install/ee4308_drone/lib/ee4308_drone/: behavior  controller  estimator  planner
install/ee4308_drone/share/ament_index/resource_index/package_run_dependencies/: ee4308_drone
install/ee4308_drone/share/ament_index/resource_index/parent_prefix_path/: ee4308_drone
install/ee4308_drone/share/ament_index/resource_index/rclcpp_components/: ee4308_drone
install/ee4308_drone/share/ee4308_drone/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ee4308_drone/share/ee4308_drone/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  ee4308_droneConfig-version.cmake  ee4308_droneConfig.cmake  export_behavior_componentExport-noconfig.cmake  export_controller_componentExport-noconfig.cmake  export_estimator_componentExport-noconfig.cmake  export_planner_componentExport-noconfig.cmake
install/ee4308_drone/share/ee4308_drone/environment/: ament_prefix_path.dsv  path.dsv
install/ee4308_turtle2/lib/ee4308_turtle2/: behavior  controller  map_loader  planner
install/ee4308_turtle2/share/ament_index/resource_index/package_run_dependencies/: ee4308_turtle2
install/ee4308_turtle2/share/ament_index/resource_index/parent_prefix_path/: ee4308_turtle2
install/ee4308_turtle2/share/ament_index/resource_index/rclcpp_components/: ee4308_turtle2
install/ee4308_turtle2/share/ee4308_turtle2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ee4308_turtle2/share/ee4308_turtle2/cmake/: ament_cmake_export_targets-extras.cmake  ee4308_turtle2Config-version.cmake  ee4308_turtle2Config.cmake  export_behavior_componentExport-noconfig.cmake  export_map_loader_componentExport-noconfig.cmake
install/ee4308_turtle2/share/ee4308_turtle2/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/ee4308_bringup/: CMakeLists.txt
src/ee4308_bringup/launch/: proj2_sim.launch.py  sim.launch.py  spawn_models.launch.py
src/ee4308_bringup/maps/: proj2_sim.pgm  proj2_sim.yaml
src/ee4308_bringup/models/drone/: README  drone.urdf  drone_proj2.sdf  model.config  model.sdf
src/ee4308_bringup/models/turtle/: turtle.urdf  turtle_proj1.sdf  turtle_proj2.sdf
src/ee4308_bringup/params/: proj2.yaml  ros_gz_bridge_proj2.yaml
src/ee4308_bringup/rviz/: proj2.rviz
src/ee4308_bringup/worlds/: empty_world.world  turtlebot3_house.world  turtlebot3_world.world
src/ee4308_drone/: CMakeLists.txt  package.xml
src/ee4308_drone/include/ee4308_drone/: behavior.hpp  controller.hpp  core.hpp  estimator.hpp  planner.hpp
src/ee4308_drone/src/: behavior.cpp  controller.cpp  estimator.cpp  planner.cpp
src/ee4308_turtle2/: CMakeLists.txt
src/ee4308_turtle2/include/ee4308_turtle2/: core.hpp
src/ee4308_turtle2/src/: behavior.cpp  controller.cpp  map_loader.cpp  planner.cpp
